--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "994407617462",
+	"ownerNumberr": "+994407617462",
+	"botnumber": "994407617462",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
@@ -11,7 +11,7 @@
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"ownername": "© LAHIRU",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
